--- a/app/src/main/res/layout/fragment_challenge_start.xml
+++ b/app/src/main/res/layout/fragment_challenge_start.xml
@@ -14,27 +14,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:paddingTop="@dimen/common_padding"
         tools:context=".ui.screen.ChallengeStartFragment">
 
         <TextView
-            android:id="@+id/tv_challenge_start_in"
+            android:id="@+id/tv_challenge_start_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/challenge_start_in"
             android:textColor="@color/black"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_challenge_start_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/in"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:layout_marginTop="@dimen/common_padding"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_challenge_start_1" />
+
+        <TextView
             android:id="@+id/tv_sec_o"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="30dp"
+            android:textSize="26sp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="@{viewModel.timeLeft.substring(1)}"
             app:layout_constraintStart_toEndOf="@id/guideline_vertical"
@@ -42,12 +58,14 @@
 
         <TextView
             android:id="@+id/tv_sec_z"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="10dp"
+            android:textSize="26sp"
+            android:layout_marginEnd="5dp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="@{viewModel.timeLeft.substring(0,1)}"
             app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
