--- a/app/src/main/res/layout/fragment_challenge_timer.xml
+++ b/app/src/main/res/layout/fragment_challenge_timer.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="0"
             app:layout_constraintEnd_toStartOf="@id/tv_min_z"
@@ -41,6 +42,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="0"
             app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
@@ -60,6 +62,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="0"
             app:layout_constraintStart_toEndOf="@id/guideline_vertical"
@@ -72,6 +75,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/bg_timer_grey"
+            android:textColor="@color/white"
             android:gravity="center"
             android:text="0"
             app:layout_constraintStart_toEndOf="@id/tv_sec_o"
@@ -101,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/save"
+            android:backgroundTint="@color/color_secondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_sec_o" />
