--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="color_primary">#1d3f86</color>
+    <color name="color_primary_variant">#285ca5</color>
+    <color name="color_secondary">#b24a28</color>
+    <color name="color_secondary_variant">#EC825F</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#606060</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
